# RustyWolf

./: Cargo.toml  README.md
src/: cli.rs  main.rs  rustywolf.icns  webview.rs
